<resources>
    <string name="app_name">Study Buddy</string>
    <string name="study">Study</string>
    <string name="buddy">Buddy</string>
    <string name="start_study">Start Study Session</string>
    <string name="end_study">End Study Session</string>
    <string name="book">Book</string>
    <string name="home">Home</string>
    <string name="group_name">BlueJAY Computing</string>
    <string name="study_session">Study Session</string>
    <string name="duration">Duration:</string>
    <string name="pickups"># of Pickups:</string>
    <string name="distractions"># of Distractions:</string>
    <string name="notifications"># of Notifications:</string>
    <string name="pickup_num">5</string>
    <string name="distraction_num">2</string>
    <string name="notification_num">10</string>
    <string name="time">Time:</string>
    <string name="your_session">Your Study Session</string>

</resources>