<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EndSession">

    <TextView
        android:id="@+id/study_session2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/your_session"
        android:textColor="#673AB7"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/time2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/distractions2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/distractions"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/notifs2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/distraction_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/distraction_num"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/notif_num2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/time2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/duration"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pickups2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pickup_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/pickup_num"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/distraction_num2"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/pickups2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/pickups"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/distractions2"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/time_view2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="50dp"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pickup_num2"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="00:00" />

    <TextView
        android:id="@+id/notifs2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="80dp"
        android:text="@string/notifications"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/go_home"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notif_num2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="80dp"
        android:text="@string/notification_num"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/go_home"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/go_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:onClick="backToMain"
        android:text="@string/home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>