<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartSession">

    <TextView
        android:id="@+id/pickup_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/pickup_num"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/distraction_num"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/time_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="50dp"
        android:textColor="#000000"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pickup_num"
        app:layout_constraintEnd_toEndOf="parent"
        tools:text="00:00" />

    <TextView
        android:id="@+id/distraction_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/distraction_num"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/notif_num"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/end_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:onClick="endSession"
        android:text="@string/end_study"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:textColor="#606060"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/study_session"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.205"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="Date" />

    <TextView
        android:id="@+id/study_session"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        android:text="@string/study_session"
        android:textColor="#673AB7"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@+id/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/pickups"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/pickups"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/distractions"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/distractions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/distractions"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/notifs"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notifs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="80dp"
        android:text="@string/notifications"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/end_session"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/notif_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginRight="100dp"
        android:layout_marginBottom="80dp"
        android:text="@string/notification_num"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/end_session"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginBottom="50dp"
        android:text="@string/time"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/pickups"
        app:layout_constraintStart_toStartOf="parent" />
    <!--
    <TextView
        android:id="@+id/label_accel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginLeft="28dp"
        android:layout_marginBottom="28dp"
        android:text="@string/accelerometer_sensor_1_2f_2_2f_3_2f"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/end_session"
        app:layout_constraintStart_toStartOf="parent" />
      -->
</androidx.constraintlayout.widget.ConstraintLayout>